@@ -23,6 +23,7 @@ my $itype;
 my $otype;
 my $recint;
 my $join;
+my @fields;
 my $opt_verbose;
 my $debug;
 
@@ -36,6 +37,7 @@ if( ! GetOptions(
 	"recint|r=i"	=> \$recint,
 	"join|j"	=> \$join,
 	"verbose|v!"	=> \$opt_verbose,
+	"fields|f=s"	=> \@fields,
 	"debug!"	=> \$debug,
 )){
 	$needhelp++;
@@ -51,6 +53,7 @@ convert workout files between formats
 --output|-o=<type>  input file type
 --join              join blocks
 --recint|-r=<int>   sampling interval
+--fields|-f=<n,n..> write only specified fields
 --debug             enable debuging output
 
 EOF
@@ -60,6 +63,10 @@ EOF
 if( @ARGV != 2 ){
 	print STDERR "in- and output filename required\n";
 	$needhelp++;
+}
+
+if( @fields ){
+	@fields = split(/,/,join(',',@fields));
 }
 
 if( $needhelp ){
@@ -77,14 +84,20 @@ my $src = Workout::file_read( $ifile, {
 	ftype	=> $itype,
 	debug	=> $debug,
 } );
+
 my $ath = $src->can( 'athlete' )
 	? $src->athlete
 	: Workout::Athlete->new;
+
 my $dst = Workout::file_new( { 
 	ftype	=> $otype,
 	athlete	=> $ath,
 	debug	=> $debug,
 } );
+if( my @unsup = $dst->fields_unsupported( @fields )){
+	print STDERR "destination store doesn't support fields: @unsup\n";
+	exit 1;
+}
 
 if( ! $join && ! $dst->cap_block ){
 	$join++;
@@ -119,6 +132,7 @@ my $res = $iter = Workout::filter('Resample', $iter, {
 } ) if $recint;
 
 $dst->from( $iter );
+$dst->fields_io( @fields ) if @fields;
 $dst->write( $ofile );
 
 if( $opt_verbose ){
